fix spacing around avatar

--- a/screen.css
+++ b/screen.css
@@ -12,10 +12,10 @@ body{
 header {
     background-color: #ffffff;
     flex-direction: row;
-    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 8px 16px;
 }
 
 main {
@@ -26,6 +26,10 @@ main {
 .user-profile {
     display: flex;
     align-items: center;
+}
+
+.user-profile p {
+    margin-right: 16px;
 }
 
 .avatar {
